[project]
name = "pyytlounge"
version = "1.5.0"
authors = [
  { name="Fabio", email="example@example.com" },
]
description = "YouTube Lounge API wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests==2.28.1',
  'aiohttp==3.8.1',
]

[project.urls]
"Homepage" = "https://github.com/FabioGNR/pyytlounge"
"Bug Tracker" = "https://github.com/FabioGNR/pyytlounge/issues"

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-mock',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"