[project]
name = "pyytlounge"
version = "2.0.0"
authors = [
  { name="Fabio", email="example@example.com" },
]
description = "YouTube Lounge API wrapper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'aiohttp>=3.8.4',
]

[project.urls]
"Homepage" = "https://github.com/FabioGNR/pyytlounge"
"Bug Tracker" = "https://github.com/FabioGNR/pyytlounge/issues"

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-mock',
]
docs = [
  'sphinx'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"